@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-launch-box
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> gnome-launch-box-0.4.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   13 Aug 2012; Justin Lecher <jlec@gentoo.org> gnome-launch-box-0.4.ebuild,
   metadata.xml:
